--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 400px;
+  width: 430px;
   background-color: #fff;
   z-index: 3;
   -webkit-box-sizing: border-box;
@@ -139,16 +139,16 @@ body {
 }
 
 .modal-container .modal .view-title {
-  font-size: 25px;
+  font-size: 22px;
   font-weight: bold;
 }
 
 .modal-container .modal .view-desc {
-  font-size: 16px;
+  font-size: 15px;
 }
 
 .modal-container .modal .view-date {
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .modal-container .modal .view-priority {
@@ -162,7 +162,7 @@ body {
 
 .modal-container .modal .completed-label {
   background-color: #a80000;
-  width: 60px;
+  width: 70px;
   margin: 0 auto;
   padding: 2px 10px;
   font-size: 13px;
@@ -242,6 +242,10 @@ body {
   margin-top: 10px;
   background-color: white;
   padding: 0 30px;
+}
+
+#todo-items .single-todo .title {
+  font-size: 16px;
 }
 
 #todo-items .single-todo .icons {
